test/compile_errors/err_string_plus_concat.w
//! expect-check-fail: string concatenation uses '++', not '+'

fn main:
    let s = "a" + "b"
    print(s)
